--- a/.gitignore
+++ b/.gitignore
@@ -15,23 +15,14 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
-develop-eggs/
-dist/
 downloads/
-eggs/
-.eggs/
-lib/
-lib64/
 parts/
 sdist/
 var/
 wheels/
 pip-wheel-metadata/
 share/python-wheels/
-*.egg-info/
 .installed.cfg
-*.egg
 MANIFEST
 
 # PyInstaller
@@ -142,3 +133,6 @@ dmypy.json
 *.csv
 *.zip
 *.png
+
+#vscode
+*__pycache__
