delete specify version for stable-baselines3

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ matplotlib
 # Model Building Requirements
 scikit-learn>=0.21.0
 gym>=0.17
-stable-baselines3[extra]==1.0
+stable-baselines3[extra]
 
 # testing requirements
 pytest
